traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:12: error: '(' expected but '{' found.
    else if {
            ^TraversalDiagonal:15: error: illegal start of simple expression
  }
  ^